--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='script.js'></script>
+    
 </head>
 <body>
-    
+    <header>
+        <div class="container" id="start">
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <h1>Coding Quiz!</h1>
+                    <p>
+                        Answer the code related questions in 60 seconds or less. Every time you answer incorrectly, you will lose 5 seconds from the timer.
+                        Once time runs out or you've answered all the questions, add your initials to the high score hall of fame!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </header>
+    <script src='script.js'></script> 
 </body>
 </html>
