--- a/highscores.html
+++ b/highscores.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-   
+    <nav class="nav">
+        <a class="nav-link active" href="index.html">Go Home</a>
+      </nav>
     <script src='script.js'></script>
 </body>
 </html>
