--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav class="nav">
             <a class="nav-link active" href="highscores.html">View High Scores</a>
           </nav>
+          <span id="timer" class="float-right mr-2">Time: 0</span>
     </header>
 
     <!-- Home -->
@@ -26,7 +27,7 @@
                     Answer the code related questions in 60 seconds or less. Every time you answer incorrectly, you will lose 5 seconds from the timer.
                     Once time runs out or you've answered all the questions, add your initials to the high score hall of fame!
                 </p>
-                <button type="button" class="btn btn-info btn-sm submitBtn">Start</button>
+                <button type="button" id= "startBtn" class="btn btn-info btn-sm startBtn">Start</button>
             </div>
         </div>
     </div>
@@ -48,7 +49,7 @@
     </div>
 
     <!-- Finish -->
-    <div class="container" id="addScore">
+    <div class="container" id="add-score">
         <div class="row justify-content-center">
             <div class="col-10" id="quiz-block">
                 <h2>Finished!</h2>
@@ -56,13 +57,17 @@
                 <form class="form-group">
                     <label for="new-score">Add your initials:</label>
                     <input type="text" id="userInitials">
-                    <button type="button" class="btn btn-info btn-sm submitBtn">Submit your score</button>
+                    <button type="button" id = "submitBtn" class="btn btn-info btn-sm submitBtn">Submit your score</button>
                 </form>
 
             </div>
         </div>
     </div>
-
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src='questions.js'></script>
     <script src='script.js'></script> 
 </body>
 </html>
