added first 4 questions to js file.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-10">
                 <h1>Coding Quiz!</h1>
                 <p>
-                    Answer the code related questions in 60 seconds or less. Every time you answer incorrectly, you will lose 5 seconds from the timer.
+                    Answer the code related questions in 120 seconds or less. Every time you answer incorrectly, you will lose 20 seconds from the timer.
                     Once time runs out or you've answered all the questions, add your initials to the high score hall of fame!
                 </p>
                 <button type="button" id= "startBtn" class="btn btn-info btn-sm startBtn">Start</button>
@@ -38,10 +38,10 @@
             <div class="col-10" id="quiz-block">
                 <h3 id="questions">QUESTION</h3>
                 <ul id="answers" class="listUnstyled">
-                    <li class="answerChoice">A</li>
-                    <li class="answerChoice">B</li>
-                    <li class="answerChoice">C</li>
-                    <li class="answerChoice">D</li>
+                    <li class="answerChoice" data-number="1">A</li>
+                    <li class="answerChoice" data-number="2">B</li>
+                    <li class="answerChoice" data-number="3">C</li>
+                    <li class="answerChoice" data-number="4">D</li>
                 </ul>
                 <p class="feedback"></p>
             </div>
