formatted seconds on timer.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <nav class="nav">
             <a class="nav-link active" href="highscores.html">View High Scores</a>
           </nav>
-          <span id="timer" class="float-right mr-2">Time: 0</span>
+          <div id="seconds">
+            <span class="float-right mr-2">Time: 60</span>
+          </div>
     </header>
 
     <!-- Home -->
@@ -24,7 +26,7 @@
             <div class="col-10">
                 <h1>Coding Quiz!</h1>
                 <p>
-                    Answer the code related questions in 120 seconds or less. Every time you answer incorrectly, you will lose 20 seconds from the timer.
+                    Answer the code related questions in 60 seconds or less. Every time you answer incorrectly, you will lose 20 seconds from the timer.
                     Once time runs out or you've answered all the questions, add your initials to the high score hall of fame!
                 </p>
                 <button type="button" id= "startBtn" class="btn btn-info btn-sm startBtn">Start</button>
