fixed timer issues.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="nav">
             <a class="nav-link active" href="highscores.html">View High Scores</a>
           </nav>
-          <div id="seconds">
+          <div id="seconds" class="timer">
             <span class="float-right mr-2">Time: 60</span>
           </div>
     </header>
@@ -29,7 +29,7 @@
                     Answer the code related questions in 60 seconds or less. Every time you answer incorrectly, you will lose 20 seconds from the timer.
                     Once time runs out or you've answered all the questions, add your initials to the high score hall of fame!
                 </p>
-                <button type="button" id= "startBtn" class="btn btn-info btn-sm startBtn">Start</button>
+                <button type="button" id="startBtn" class="btn btn-info btn-sm startBtn">Start</button>
             </div>
         </div>
     </div>
