added d-none to quiz and finished containers.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
 
     <!-- Home -->
-    <div class="container" id="home">
+    <div class="container mt-5" id="home">
         <div class="row justify-content-center">
-            <div class="col-10">
+            <div class="col-10 col-lg-10 text-center">
                 <h1>Coding Quiz!</h1>
                 <p>
                     Answer the code related questions in 60 seconds or less. Every time you answer incorrectly, you will lose 20 seconds from the timer.
@@ -35,11 +35,11 @@
     </div>
 
     <!-- Q/A -->
-    <div class="container" id="quiz">
-        <div class="row justify-content-center">
-            <div class="col-10" id="quiz-block">
-                <h3 id="questions">QUESTION</h3>
-                <ul id="answers" class="listUnstyled">
+    <div class="container mt-5 d-none" id="quiz">
+        <div class="row justify-content-center mt-5 pt-3 pb-3">
+            <div class="col-10 col-lg-8" id="quiz-block">
+                <h3 id="questions" class="mb-4">QUESTION</h3>
+                <ul id="answers" class="list-unstyled">
                     <li class="answerChoice" data-number="1">A</li>
                     <li class="answerChoice" data-number="2">B</li>
                     <li class="answerChoice" data-number="3">C</li>
@@ -51,9 +51,9 @@
     </div>
 
     <!-- Finish -->
-    <div class="container" id="add-score">
-        <div class="row justify-content-center">
-            <div class="col-10" id="quiz-block">
+    <div class="container mt-5 d-none" id="add-score">
+        <div class="row justify-content-center mt-5 pt-3 pb-3">
+            <div class="col-10 col-lg-8">
                 <h2>Finished!</h2>
                 <p id="user-score"></p>
                 <form class="form-group">
