fixed issue with quiz disappearing after 2 seconds.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <div class="col-10 col-lg-8" id="quiz-block">
                 <h3 id="questions" class="mb-4">QUESTION</h3>
                 <ul id="answers" class="list-unstyled">
-                    <li class="answerChoice" data-number="1">A</li>
-                    <li class="answerChoice" data-number="2">B</li>
-                    <li class="answerChoice" data-number="3">C</li>
-                    <li class="answerChoice" data-number="4">D</li>
+                    <li id = "answer1" class="answerChoice">A</li>
+                    <li id = "answer2" class="answerChoice">B</li>
+                    <li id = "answer3" class="answerChoice">C</li>
+                    <li  id = "answer4" class="answerChoice">D</li>
                 </ul>
                 <p class="feedback"></p>
             </div>
@@ -71,4 +71,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src='script.js'></script> 
 </body>
-</html>
+</html
