--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="nav">
             <a class="nav-link active" href="highscores.html">View High Scores</a>
           </nav>
-          <div id="seconds" class="timer">
+          <div id="timer" class="timer">
             <span class="float-right mr-2">Time: 60</span>
           </div>
     </header>
