added score counter to page.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <div id="timer" class="timer">
             <span class="float-right mr-2">Time: 60</span>
           </div>
+          <div id="score">
+              <span class="float-right mr-2">Score: 0</span>
+          </div>
     </header>
 
     <!-- Home -->
